--- a/app/src/main/res/drawable/premium_btn.xml
+++ b/app/src/main/res/drawable/premium_btn.xml
@@ -1,25 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="#506E7E">
 
-    <item android:state_pressed="true">
-        <shape android:shape="rectangle">
-            <gradient android:angle="270" android:endColor="#3B4C55" android:startColor="#18272B" />
+    <item
+        android:bottom="3dp"
+        android:left="3dp"
+        android:right="4dp"
+        android:top="2dp">
+        <shape>
+            <solid android:color="@android:color/darker_gray" />
             <corners android:radius="20dp" />
-            <padding android:bottom="10dp" android:left="10dp" android:right="10dp" android:top="10dp" />
+            <padding
+                android:bottom="10dp"
+                android:left="10dp"
+                android:right="10dp"
+                android:top="10dp" />
         </shape>
     </item>
-    <item android:state_focused="true">
+    <item
+        android:bottom="4dp"
+        android:right="5dp">
         <shape android:shape="rectangle">
-            <gradient android:angle="270" android:endColor="@color/grey" android:startColor="#0D1517" />
+            <gradient
+                android:angle="270"
+                android:endColor="#0D1517"
+                android:startColor="@color/grey" />
             <corners android:radius="20dp" />
-            <padding android:bottom="10dp" android:left="10dp" android:right="10dp" android:top="10dp" />
+            <padding
+                android:bottom="10dp"
+                android:left="10dp"
+                android:right="10dp"
+                android:top="10dp" />
         </shape>
     </item>
-    <item>
-        <shape android:shape="rectangle">
-            <gradient android:angle="270" android:endColor="#0D1517" android:startColor="@color/grey" />
-            <corners android:radius="20dp" />
-            <padding android:bottom="10dp" android:left="10dp" android:right="10dp" android:top="10dp" />
-        </shape>
-    </item>
-</selector>
+
+</ripple>
