new updated UI ( stage 1 ) with scope of profile added

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -10,95 +9,54 @@
         android:background="@color/appBG"
         android:fitsSystemWindows="true">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:background="@color/black"
-            android:minHeight="?attr/actionBarSize"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <TextView
-                android:id="@+id/title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:fontFamily="@font/aladin"
-                android:text="@string/cryptic_warranty"
-                android:textColor="@color/white"
-                android:textSize="25sp"
-                tools:layout_editor_absoluteX="115dp"
-                tools:layout_editor_absoluteY="15dp" />
-
-        </androidx.appcompat.widget.Toolbar>
-
-        <Button
-            android:id="@+id/scanQRbtn"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_margin="50dp"
-            android:textSize="20sp"
-            android:background="@drawable/premium_btn"
-            android:text="@string/scan_qr"
-            android:textColor="@color/white"
-            android:elevation="40dp"
-            android:shadowRadius="25"
-            android:shadowColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="@id/guideline2"
-            app:layout_constraintBottom_toTopOf="@+id/guideline2"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolbar"
-            app:layout_constraintVertical_chainStyle="packed" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="30dp"
-            android:text="@string/or"
+            android:fontFamily="@font/carter_one"
+            android:text="Continue as :"
             android:textColor="@color/white"
-            android:textSize="25sp"
-            app:layout_constraintBottom_toTopOf="@+id/guideline2"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
+            android:textSize="30sp"
+            app:layout_constraintStart_toStartOf="@+id/guideline3"
             app:layout_constraintTop_toTopOf="@+id/guideline2" />
 
-        <EditText
-            android:id="@+id/serialEditText"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:hint="@string/enter_serial_number"
-            android:minHeight="38dp"
-            android:textColorHint="#C1BEBE"
+        <Button
+            android:id="@+id/retailer"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_margin="50dp"
+            android:background="@drawable/premium_btn"
+            android:elevation="40dp"
+            android:shadowColor="@color/white"
+            android:padding="15dp"
+            android:shadowRadius="25"
+            android:text="Retailer"
+            android:textColor="@color/white"
+            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/searchWithSerialNumber"
-            app:layout_constraintStart_toStartOf="@+id/guideline3"
-            app:layout_constraintTop_toBottomOf="@+id/textView"
-            app:layout_constraintVertical_chainStyle="packed" />
+            app:layout_constraintEnd_toStartOf="@+id/buyer"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toStartOf="@+id/guideline3" />
 
         <Button
-            android:id="@+id/searchWithSerialNumber"
+            android:id="@+id/buyer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_margin="50dp"
             android:background="@drawable/premium_btn"
-            android:focusable="true"
-            android:foregroundGravity="right"
-            android:text="@string/search"
-            android:shadowRadius="25"
+            android:elevation="40dp"
             android:shadowColor="@color/white"
+            android:padding="15dp"
+            android:shadowRadius="25"
+            android:text="Buyer"
             android:textColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="@+id/serialEditText"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guideline4"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/serialEditText"
-            app:layout_constraintTop_toTopOf="@+id/serialEditText" />
+            app:layout_constraintStart_toEndOf="@+id/retailer" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline2"
@@ -112,14 +70,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.1"/>
+            app:layout_constraintGuide_percent="0.1" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.9"/>
+            app:layout_constraintGuide_percent="0.9" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
