--- a/app/src/main/res/layout-v26/activity_customer_dashboard.xml
+++ b/app/src/main/res/layout-v26/activity_customer_dashboard.xml
@@ -14,7 +14,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginBottom="50dp"
-            android:background="@color/PinkRed"
             app:layout_anchor="@id/bottomAppbar">
 
             <androidx.appcompat.widget.Toolbar
@@ -53,33 +52,17 @@
 
             </androidx.appcompat.widget.Toolbar>
 
-            <!--            <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-            <!--                android:id="@+id/addBtn"-->
-            <!--                android:layout_width="48dp"-->
-            <!--                android:layout_height="48dp"-->
-            <!--                android:layout_margin="25dp"-->
-            <!--                android:backgroundTint="@color/LightBlue"-->
-            <!--                android:clickable="true"-->
-            <!--                android:contentDescription="@string/purchaseHistory"-->
-            <!--                android:focusable="true"-->
-            <!--                android:foreground="@android:drawable/ic_menu_recent_history"-->
-            <!--                android:tooltipText="@string/purchaseHistory"-->
-            <!--                android:translationX="100dp"-->
-            <!--                android:translationY="100dp"-->
-            <!--                app:layout_constraintBottom_toBottomOf="parent"-->
-            <!--                app:layout_constraintEnd_toEndOf="parent"-->
-            <!--                app:rippleColor="@color/lightBabyPink" />-->
-
-            <!--            <View-->
-            <!--                android:id="@+id/circleCover"-->
-            <!--                android:layout_width="48dp"-->
-            <!--                android:layout_height="48dp"-->
-            <!--                android:layout_margin="25dp"-->
-            <!--                android:background="@drawable/circle_explosion"-->
-            <!--                android:visibility="invisible"-->
-            <!--                app:layout_constraintBottom_toBottomOf="parent"-->
-            <!--                app:layout_constraintEnd_toEndOf="parent" />-->
-
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/nav_host_fragment"
+                android:name="androidx.navigation.fragment.NavHostFragment"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:defaultNavHost="true"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/toolbar"
+                app:navGraph="@navigation/customer_flow" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
