--- a/app/src/main/res/drawable/circle_explosion.xml
+++ b/app/src/main/res/drawable/circle_explosion.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="@color/lightBrown" />
+    <gradient
+        android:angle="20"
+        android:centerColor="#491C31"
+        android:centerY=".5"
+        android:endColor="@color/MattPink"
+        android:startColor="@color/black" />
 </shape>
