--- a/app/src/main/res/layout/activity_customer_dashboard.xml
+++ b/app/src/main/res/layout/activity_customer_dashboard.xml
@@ -7,10 +7,11 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/Root"
         android:background="@color/appBG">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/Root"
+
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginBottom="50dp"
@@ -21,7 +22,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:background="@color/black"
-                android:elevation="25dp"
+                android:elevation="50dp"
                 android:minHeight="?attr/actionBarSize"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -56,6 +57,7 @@
                 android:name="androidx.navigation.fragment.NavHostFragment"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:elevation="0dp"
                 app:defaultNavHost="true"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -68,8 +70,9 @@
         <View
             android:id="@+id/circleCover"
             android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_height="42dp"
             android:layout_gravity="center|bottom"
+            android:elevation="-25dp"
             android:background="@drawable/circle_explosion"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -79,6 +82,7 @@
             android:id="@+id/bottomAppbar"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            app:fabCradleRoundedCornerRadius="50dp"
             android:layout_gravity="bottom"
             app:fabCradleMargin="10dp">
 
@@ -98,7 +102,7 @@
             android:layout_height="wrap_content"
             android:backgroundTint="@color/LightBlue"
             android:contentDescription="@string/purchaseHistory"
-            android:src="@android:drawable/ic_menu_recent_history"
+            app:srcCompat="@drawable/warranty_certificate"
             app:layout_anchor="@id/bottomAppbar"
             app:rippleColor="@color/lightBabyPink" />
 
