--- a/app/src/main/res/layout/activity_customer_dashboard.xml
+++ b/app/src/main/res/layout/activity_customer_dashboard.xml
@@ -72,7 +72,7 @@
             android:layout_width="48dp"
             android:layout_height="42dp"
             android:layout_gravity="center|bottom"
-            android:elevation="-25dp"
+            android:elevation="0dp"
             android:background="@drawable/circle_explosion"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -97,7 +97,7 @@
         </com.google.android.material.bottomappbar.BottomAppBar>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/addBtn"
+            android:id="@+id/warranty_check"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/LightBlue"
