--- a/app/src/main/res/layout/add_new_product_bottomsheet.xml
+++ b/app/src/main/res/layout/add_new_product_bottomsheet.xml
@@ -125,24 +125,54 @@
             android:id="@+id/addImage"
             android:layout_width="56dp"
             android:layout_height="56dp"
-            android:layout_margin="20dp"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="100dp"
             android:backgroundTint="@color/MattPink"
             android:clickable="true"
             android:contentDescription="@string/add_photo"
             android:focusable="true"
             android:scaleType="center"
+
             android:src="@drawable/ic_baseline_add_photo_alternate_24"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/productPriceLayout"
             app:rippleColor="@color/lightBabyPink" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="150dp"
+            android:layout_height="120dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="100dp"
+            android:scaleType="centerCrop"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/productPriceLayout" />
+
+        <ImageButton
+            android:id="@+id/deleteBtn"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginHorizontal="15dp"
+            android:background="@android:color/transparent"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@id/imageView"
+            app:layout_constraintStart_toEndOf="@+id/imageView"
+            app:layout_constraintTop_toTopOf="@id/imageView"
+            app:srcCompat="@drawable/ic_baseline_delete_outline_24" />
+
 
         <Button
             android:id="@+id/addProductBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="15dp"
-            android:layout_marginVertical="10dp"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/premium_btn"
             android:drawableEnd="@drawable/forward_arrow"
             android:focusable="true"
@@ -155,8 +185,7 @@
             android:text="@string/add_product"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/addImage" />
+            app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
