--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -155,25 +155,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/create_pass" />
 
-        <Button
-            android:id="@+id/btn_retailer"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginVertical="25dp"
-            android:layout_marginLeft="55dp"
-            android:layout_marginRight="55dp"
-            android:background="@drawable/premium_btn"
-            android:clickable="true"
-            android:focusable="true"
-            android:fontFamily="@font/carter_one"
-            android:text="Retailer SIGN IN"
-            android:textColor="@color/white"
-            android:textSize="14sp"
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminateTint="@color/lightBabyPink"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/create_pass" />
-
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
