--- a/app/src/main/res/layout/add_new_product_bottomsheet.xml
+++ b/app/src/main/res/layout/add_new_product_bottomsheet.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -118,25 +117,23 @@
             android:layout_marginHorizontal="50dp"
             android:background="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="578dp" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/addImage"
             android:layout_width="56dp"
             android:layout_height="56dp"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginBottom="100dp"
             android:backgroundTint="@color/MattPink"
             android:clickable="true"
             android:contentDescription="@string/add_photo"
             android:focusable="true"
-            android:scaleType="center"
-
+            android:layout_marginVertical="30dp"
             android:src="@drawable/ic_baseline_add_photo_alternate_24"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/addProductBtn"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_chainStyle="spread"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/productPriceLayout"
             app:rippleColor="@color/lightBabyPink" />
@@ -145,12 +142,13 @@
             android:id="@+id/imageView"
             android:layout_width="150dp"
             android:layout_height="120dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginBottom="100dp"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginVertical="30dp"
             android:scaleType="centerCrop"
             android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/deleteBtn"
+            app:layout_constraintEnd_toStartOf="@+id/addProductBtn"
+            app:layout_constraintHorizontal_chainStyle="spread"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/productPriceLayout" />
 
@@ -158,12 +156,12 @@
             android:id="@+id/deleteBtn"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginHorizontal="15dp"
             android:background="@android:color/transparent"
             android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="@id/imageView"
-            app:layout_constraintStart_toEndOf="@+id/imageView"
-            app:layout_constraintTop_toTopOf="@id/imageView"
+            android:layout_marginBottom="15dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/imageView"
+            app:layout_constraintStart_toStartOf="@+id/imageView"
             app:srcCompat="@drawable/ic_baseline_delete_outline_24" />
 
 
@@ -171,12 +169,8 @@
             android:id="@+id/addProductBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="15dp"
-            android:layout_marginBottom="10dp"
             android:background="@drawable/premium_btn"
             android:drawableEnd="@drawable/forward_arrow"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
             android:padding="10dp"
             android:shadowColor="@color/white"
             android:shadowDx="5"
@@ -185,7 +179,10 @@
             android:text="@string/add_product"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/addImage"
+            app:layout_constraintTop_toBottomOf="@+id/productPriceLayout" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
