--- a/app/src/main/res/layout/activity_warranty_info.xml
+++ b/app/src/main/res/layout/activity_warranty_info.xml
@@ -9,7 +9,7 @@
         android:layout_height="match_parent"
         android:background="@color/appBG"
         android:fitsSystemWindows="true"
-        tools:context=".customer.WarrantyInfoActivity">
+        tools:context=".customer.ui.WarrantyInfoActivity">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
@@ -26,8 +26,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:fontFamily="@font/aladin"
-                android:text="@string/warranty_details"
+                android:fontFamily="@font/carter_one"
                 android:textColor="@color/white"
                 android:textSize="25sp"
                 tools:layout_editor_absoluteX="115dp"
@@ -38,9 +37,10 @@
         <include
             android:id="@+id/warrantyCard"
             layout="@layout/warranty_card"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginVertical="25dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
