--- a/app/src/main/res/layout/warranty_card.xml
+++ b/app/src/main/res/layout/warranty_card.xml
@@ -1,53 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:backgroundTint="@color/grey"
+    android:layout_margin="10dp"
     android:padding="25dp"
     app:cardCornerRadius="15dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cardView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="25dp">
+        android:padding="25dp"
+        app:layout_constraintEnd_toStartOf="@+id/guideline6"
+        app:layout_constraintStart_toStartOf="@+id/guideline6">
 
         <ImageView
             android:id="@+id/productImage"
             android:layout_width="75dp"
             android:layout_height="100dp"
+            android:layout_marginVertical="20dp"
             android:elevation="50dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/waranty_badge"
-            app:tint="@color/white" />
+            app:srcCompat="@drawable/warranty_certificate"
+            app:tint="#FDD835" />
 
         <TextView
             android:id="@+id/ProductName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
+            android:layout_marginHorizontal="15dp"
+            android:fontFamily="@font/carter_one"
             android:text="@string/warranty_details"
             android:textColor="@color/white"
+            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/productImage"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/ProductSummary"
+            android:id="@+id/startTV"
             android:layout_width="wrap_content"
-            android:layout_height="55dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="20dp"
+            android:alpha="0"
+            android:gravity="center"
+            android:text="From :"
+            android:textColor="@color/white"
+            app:layout_constraintStart_toEndOf="@+id/productImage"
+            app:layout_constraintTop_toBottomOf="@+id/ProductName" />
+
+        <TextView
+            android:id="@+id/startDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:alpha="0"
             android:gravity="center"
             android:textColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintBottom_toBottomOf="@+id/startTV"
+            app:layout_constraintStart_toStartOf="@+id/guideline6"
+            app:layout_constraintTop_toTopOf="@+id/startTV" />
+
+        <TextView
+            android:id="@+id/EndDateTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:alpha="0"
+            android:gravity="center"
+            android:text="Till :"
+            android:textColor="@color/ic_launcher_background"
             app:layout_constraintStart_toEndOf="@+id/productImage"
-            app:layout_constraintTop_toBottomOf="@+id/ProductName"
-            tools:text="Rs 1500" />
+            app:layout_constraintTop_toBottomOf="@+id/startTV" />
+
+        <TextView
+            android:id="@+id/RemarkTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:alpha="0"
+            android:gravity="center"
+            android:text="Remark :"
+            android:textColor="@color/ic_launcher_background"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/productImage"
+            app:layout_constraintTop_toBottomOf="@+id/EndDateTV" />
+
+        <TextView
+            android:id="@+id/EndDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:alpha="0"
+            android:gravity="center"
+            android:text="hello world"
+            android:textColor="@color/ic_launcher_background"
+            app:layout_constraintBottom_toBottomOf="@+id/EndDateTV"
+            app:layout_constraintStart_toStartOf="@+id/guideline6"
+            app:layout_constraintTop_toTopOf="@+id/EndDateTV" />
+
+        <TextView
+            android:id="@+id/remark"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:alpha="0"
+            android:gravity="start"
+            android:text="hello world"
+            android:textColor="@color/ic_launcher_background"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/guideline6"
+            app:layout_constraintTop_toTopOf="@+id/RemarkTv" />
 
         <ProgressBar
             android:id="@+id/priceProgressBar"
@@ -55,10 +120,17 @@
             android:layout_height="wrap_content"
             android:indeterminateTint="@color/white"
             android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="@+id/ProductSummary"
-            app:layout_constraintEnd_toEndOf="@+id/ProductSummary"
-            app:layout_constraintStart_toStartOf="@+id/ProductSummary"
-            app:layout_constraintTop_toTopOf="@+id/ProductSummary" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/productImage"
+            app:layout_constraintTop_toBottomOf="@+id/ProductName" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent=".5" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
